--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@
 		<spring.version>5.0.2.RELEASE</spring.version>
 		<junit.version>4.12</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.233.245.29:9000/</sonar.host.url>
+		<sonar.log>6cbcc952d7a019e1e1ec918bc5dd535045d166be</sonar.log>
+		<sonar.host.url>http://52.66.244.129:9000/</sonar.host.url>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -90,12 +91,12 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>paytm Releases Nexus Repository</name>
-	      <url>http://13.234.239.87:8081/repository/paytm-release/</url>
+	      <url>http://13.232.127.188:8081/repository/maven-releases/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>paytm Snapshot Nexus Repository </name>
-	      <url>http://13.234.239.87:8081/repository/paytm-snapshot/</url>
+	      <url>http://13.232.127.188:8081/repository/maven-snapshots/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
