--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
 		<junit.version>4.12</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://ec2-13-232-151-130.ap-south-1.compute.amazonaws.com</sonar.host.url>
-	       <sonar.login>6cbcc952d7a019e1e1ec918bc5dd535045d166be</sonar.login>
+	       <sonar.login>admin</sonar.login>
+		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
