--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<spring.version>5.0.2.RELEASE</spring.version>
 		<junit.version>4.12</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://ec2-13-232-151-130.ap-south-1.compute.amazonaws.com:9000</sonar.host.url>
+		<sonar.host.url>http://13.234.75.198:9000</sonar.host.url>
 	       <sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -91,12 +91,12 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>paytm Releases Nexus Repository</name>
-	      <url>http://ec2-13-235-42-241.ap-south-1.compute.amazonaws.com:8081/repository/maven-releases/</url>
+	      <url>http://13.235.8.132:8081/repository/maven-releases/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>paytm Snapshot Nexus Repository </name>
-	      <url>http://ec2-13-235-42-241.ap-south-1.compute.amazonaws.com:8081/repository/maven-snapshots/</url>
+	      <url>http://13.235.8.132:8081/repository/maven-snapshots/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
